[package]
name = "sh1122"
description = "SPI driver for the SH1122 OLED display controller"
version = "0.1.0"
authors = ["Max Vasiliev <max@vasiliev.me>"]
keywords = ["no-std", "sh1122", "oled", "embedded", "embedded-hal-driver"]
repository = "https://github.com/skammer/sh1122"
readme = "README.md"
license = "MIT OR Apache-2.0"
exclude = [".gitignore", "demo.jpg"]
edition = "2021"

[dependencies]
embedded-hal = "0.2"
nb = "1.0.0"
embedded-graphics = "0.7.1"
embedded-graphics-core = { version = "0.3.2", optional = true }
display-interface = { path = "../display-interface", version = "0.4.0", features = [
    "async",
] }

[dependencies.itertools]
version = "0.10.5"
default-features = false

[features]
default = ["graphics"]
graphics = ["embedded-graphics-core"]
std = []
